--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
 	margin: 0px;
 	padding: 0px;
-
-	display: table;
 }
 
 #acronym {
@@ -17,34 +15,30 @@ body {
 }
 
 .letter-box {
-	width: 60vh;
-	height: 100%;
-	text-align: center;
+	display: flex;
+	align-items: center;
+
 }
 
 .letter {
-	display: inline-block;
-
 	font-family: sans-serif;
 	font-size: 80vh;
-
-	position: absolute;
-	top: 50%;
-	transform: perspective(1px) translateX(-50%) translateY(-50%);
+	margin: 0 auto;
 }
 
 .contents {
-	width: 65%;
-	height: 55%;
+	width: 60%;
+	height: 60%;
 	margin: 0 auto;
 	background-image: linear-gradient(rgb(250, 250, 250), rgb(220, 220, 220));
 	border-radius: 30px;
 	padding: 10%;
 
-	text-align: left;
+	opacity: 0;
 
-	position: relative;
-	top: 50%;
+	display: none;
+
+	transform: scale(0.5);
 }
 
 .title {
