--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 	display: flex;
 	align-items: center;
 
+	color: black;
+	text-decoration: none;
 }
 
 .letter {
@@ -26,11 +28,11 @@ body {
 	margin: 0 auto;
 }
 
-.contents {
+.letter-contents {
 	width: 60%;
 	height: 60%;
 	margin: 0 auto;
-	background-image: linear-gradient(rgb(250, 250, 250), rgb(220, 220, 220));
+	background-image: linear-gradient(rgb(253, 253, 253), rgb(220, 220, 220));
 	border-radius: 30px;
 	padding: 10%;
 
@@ -63,36 +65,31 @@ body {
 }
 
 .slice {
-	margin-top: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 
 	width: 20vw;
 	height: calc(85vh/6);
 
 	position: relative;
-	left: -20vw;
+	left: -100%;
+
+	display: flex;
+	align-items: center;
 }
 
-#red {
-	background-color: #E70000;
+.slice-contents {
+	width: 100%;
+	text-align: center;
+
+	font-family: monospace;
+	color: rgb(240, 240, 240);
+	text-shadow: 0 1px black;
+
+	opacity: 0;
 }
 
-#orange {
-	background-color: #FF8C00;
+.slice-contents > a {
+	color: rgb(240, 240, 240);
 }
 
-#yellow {
-	background-color: #FFEF00;
-}
-
-#green {
-	background-color: #00811F;
-}
-
-#blue {
-	background-color: #0044FF;
-}
-
-#purple {
-	background-color: #760089;
-}
