--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,67 @@ body {
 	padding: 0px;
 }
 
+.speech-bubble {
+	color: black;
+	padding: 3%;
+	font-weight: bold;
+	font-family: sans-serif;
+	font-size: 2.25vw;
+	position: absolute;
+	z-index: 2;
+	opacity: 0;
+
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+
+	display: none;
+}
+
+#bubble1 {
+	width: 18vw;
+	left: 2vw;
+	background-image: linear-gradient(to right, rgb(253, 253, 253), rgb(223, 223, 223));
+	border-radius: 15px 0 15px 15px;
+	text-align: left;
+}
+
+#bubble2 {
+	width: 25vw;
+	left: 28vw;
+	background-image: linear-gradient(to left, rgb(253, 253, 253), rgb(223, 223, 223));
+	border-radius: 0 15px 15px 15px;
+	text-align: left;
+}
+
+#bubble1:before {
+	content: "";
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	border-left: 15px solid rgb(223, 223, 223);
+	border-right: 15px solid transparent;
+	border-top: 15px solid rgb(223, 223, 223);
+	border-bottom: 15px solid transparent;
+	right:-29px;
+	top: 0px;
+}
+
+#bubble2:before {
+	content: "";
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	border-left: 15px solid transparent;
+	border-right: 15px solid rgb(223, 223, 223);
+	border-top: 15px solid rgb(223, 223, 223);
+	border-bottom: 15px solid transparent;
+	left: -29px;
+	top: 0px;
+}
+
 #acronym {
-	height: 100%;
+	height: 99%;
 
 	position: absolute;
 	left: 26vw;
@@ -13,6 +72,8 @@ body {
 
 	display: flex;
 	align-items: center;
+
+	opacity: 0;
 }
 
 .letter-box {
